--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <footer id="footer">
         <div class="container">
             <div id="footer__copyright">
-                &copy; 2022 Ada Developers Academy ✨ Nina Patrina ✨ Ying Goings ✨
+                &copy; 2022 Ada Developers Academy ✨ Nina Patrina ✨
             </div>
         </div>
     </footer>        
