--- a/index.html
+++ b/index.html
@@ -88,5 +88,6 @@
         </div>
     </footer>        
     <script src="src/index.js"></script>
+    <script src="./node_modules/axios/dist/axios.min.js"></script>
 </body>
 </html>
