--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container">
             <nav id="nav">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Rotating_earth_animated_transparent.gif"/>
+                <img id="globe" src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Rotating_earth_animated_transparent.gif"/>
                 <h1>Weather Report</h1>
                 <h2>For the lovely city of</h2>
                 <h1 id="city_name">Far Far Away</h1>
@@ -71,6 +71,7 @@
                 <div id="main__intro__forecast">
                     <button type="submit" class="button-19" id="get__real__temp">Realtime Temperature</button>
                     <h3 id="forecast">Forecast</h3>
+                    <img id="imgid" width="200"  src="assets/winter.jpeg" id="image" />
                     <section id="seven__day__forecast">
                         <ul id="day__forecast"></ul>
                     </section>
