fixing photo (expired free trial)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                         </form>
                     </div>
                     <div class="block__left">
-                        <h3 id="temperature">Current temperature</h3>
                         <div id="switchBtnFarenheitCelsius">
                             <button type="button" class="button-19" role="button" id="switchBtnFC">°C/°F</button>
                         </div>
@@ -69,7 +68,7 @@
                     </div>
                 </div>
                 <div id="main__intro__forecast">
-                    <button type="submit" class="button-19" id="get__real__temp">Realtime Temperature</button>
+                    <button type="submit" class="button-19" id="get__real__temp">Get Realtime Temperature</button>
                     <h3 id="forecast">Forecast</h3>
                     <img id="imgid" width="200"  src="assets/winter.jpeg" id="image" />
                     <section id="seven__day__forecast">
